--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "extern/lib.cpp.base.pbni-framework"]
 	path = extern/lib.cpp.base.pbni-framework
 	url = https://github.com/informaticon/lib.cpp.base.pbni-framework
+	branch = main
