--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -2,8 +2,7 @@
 # * determines next version number, based on the commit meesages (feat:/fix:/...)
 # * creates a tag + release
 # * builds the dll an uploads it to the gh release
-# Build the
-name: Build & Release
+name: Autorelease (Build/Tag/Release)
 on:
   push:
     branches:
@@ -35,38 +34,21 @@ jobs:
         # append_to_pre_release_tag: testrelease
         # release_branches is default to main/master and will increase the patch number if nothing found in commit messages
     
-    # make other steps below more independent of 'tag_version' by using these variables
-    - name: Store return values of tag_version
-      run: |
-        echo "RELEASE_TYPE=${{ steps.tag_version.outputs.release_type }}" >> $env:GITHUB_ENV
-        echo "NEW_TAG=${{ steps.tag_version.outputs.new_tag }}" >> $env:GITHUB_ENV
-        echo "NEW_VERSION=${{ steps.tag_version.outputs.new_version }}" >> $env:GITHUB_ENV
-
-    - name: Install Packages
-      run: vcpkg install --triplet=x86-windows-static boost-stacktrace boost-utility boost-multiprecision boost-algorithm boost-regex
-
-    - name: Configure CMake
-      run: cmake . -B build  --preset vcpkg
-     
     - name: Build
-      run: cmake --build build/ --config MinSizeRel
+      id: build
+      uses: informaticon/dev.github.base.pbni-build-action@v1
+      with:
+        version: "${{ steps.tag_version.outputs.new_version }}"
 
-  
-    - name: Sign
-      env:
-        CSB_AUTH_CLIENTID: ${{ secrets.CODESIGNING_CLIENT_ID }}
-        CSB_AUTH_CLIENTSECRET: ${{ secrets.CODESIGNING_CLIENT_SECRET }}
-      run: csb.exe $env:GITHUB_WORKSPACE/out/MinSizeRel/${{ github.event.repository.name }}.dll --silent
-      shell: powershell # USE powershell (desktop) and not default pwsh (core) to access csb.exe in PATH
-    
+    # release uses new tag created above and appends package assets, changelog.md can be set as body
+    # only run it if new tag was created
     - name: Create release
-      if: ${{ env.RELEASE_TYPE != '' }}
+      if: ${{ steps.tag_version.outputs.release_type != '' }}
       uses: softprops/action-gh-release@v1
       id: create_release
       with:
         draft: false
-        prerelease: ${{ contains(fromJSON('["premajor", "preminor", "prepatch", "prerelease"]'), env.RELEASE_TYPE) }}
-        tag_name: ${{ env.NEW_TAG }}
+        prerelease: ${{ contains(fromJSON('["premajor", "preminor", "prepatch", "prerelease"]'), steps.tag_version.outputs.release_type) }}
+        tag_name: ${{ steps.tag_version.outputs.new_tag }}
         generate_release_notes: true
-        files: |
-          out/MinSizeRel/${{ github.event.repository.name }}.dll   
+        files: ${{ steps.build.outputs.dll-file }} 
