--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,12 @@ jobs:
           submodules: recursive
           token: ${{ secrets.GH_PRIVATE_READ_PAT }}
 
+      # Needed to give vcpkg access to the private repository
+      - name: Git Creds
+        run: git config --global url.https://`${{ secrets.GH_PRIVATE_READ_PAT }}@github.com/.insteadOf https://github.com/
+        # The backtick ensures, that the secret isn't written into the config file 
+        # instead, the token will be expanded when go wants to download a package
+
       - name: Build
         id: build
-        uses: informaticon/dev.github.base.pbni-build-action@v1
+        uses: informaticon/dev.github.base.pbni-build-action@v1.3.2
