chore: cleanup build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,38 +15,36 @@ set(VERSION_STR "" CACHE STRING "Version number to add to the DLL")
 
 project(°°°PACKAGE_NAME°°° LANGUAGES CXX)
 
-string(TIMESTAMP BUILD_NR "%Y,%m,%d,%H%M")
-add_definitions(-DVER_BUILD_NR=${BUILD_NR})
-add_definitions(-DVER_COMPANY_STR="Informaticon AG")
-add_definitions(-DVER_NAME_STR="${PROJECT_NAME}")
-add_definitions(-DVER_VERSION_STR="${VERSION_STR}")
-
 add_library(°°°PACKAGE_NAME°°° SHARED
 	# Add your source files here
 	# Example: src/main.cpp
 	°°°SOURCE_FILES°°°
-	src/version.rc
 )
 
-source_group("Source Files"
-FILES
-	# Add your source files here
-	# Example: src/main.cpp
-	°°°SOURCE_FILES°°°
-)
 
 target_compile_features(°°°PACKAGE_NAME°°° PUBLIC cxx_std_20)
 
 set_target_properties(°°°PACKAGE_NAME°°°
 PROPERTIES
-	OUTPUT_NAME °°°PACKAGE_NAME°°°
+	OUTPUT_NAME "${CMAKE_PROJECT_NAME}"
 	RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_PATH}
 	ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_PATH}
 	LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_PATH}
 )
 
+string(TIMESTAMP BUILD_NR "%Y,%m,%d,%H%M")
+target_compile_definitions(°°°PACKAGE_NAME°°°
+PUBLIC
+	VER_BUILD_NR=${BUILD_NR}
+	VER_COMPANY_STR="Informaticon AG"
+	VER_NAME_STR="${PROJECT_NAME}"
+	VER_VERSION_STR="${VERSION_STR}"
+)
+target_sources(°°°PACKAGE_NAME°°° PRIVATE res/version.rc)
+
 # Warning doesn't affect us, since we use a fixed Boost version
 set(Boost_NO_WARN_NEW_VERSIONS "1")
+
 
 find_package(pbni-framework CONFIG REQUIRED)
 target_link_libraries(°°°PACKAGE_NAME°°°
